--- a/src/components/base/_variables.scss
+++ b/src/components/base/_variables.scss
@@ -14,7 +14,7 @@ $base-line-height         : 1.4em;
 $code-font-stack          : Consolas, "Andale Mono", "Lucida Console", Monaco, "Courier New", Courier,  monospace !default;
 
 /// Theme colors
-$primary                  : #0075A8 !default;
+$primary                  : #005aab !default;
 $secondary                : #34495E !default;
 
 ///State colors
