--- a/src/components/pages/MainPage/style.sass
+++ b/src/components/pages/MainPage/style.sass
@@ -1,5 +1,6 @@
 @import './base/variables.scss'
-
+.ant-menu-dark .ant-menu-inline.ant-menu-sub.ant-menu-sub
+  box-shadow: none
 .page-navigation
   position: fixed
   top: 0
@@ -7,7 +8,7 @@
   padding-top: 50px
   height: 100%
   background-color: $primary
-  width: 150px;
+  width: 150px
 
 .page-header
   position: fixed
@@ -17,7 +18,7 @@
   height: 50px
   width: 100%
   line-height: 50px
-  z-index: 1
+  z-index: 1000
   text-align: right
   padding: 0 20px
 .page-body
