--- a/src/app.sass
+++ b/src/app.sass
@@ -12,3 +12,39 @@ html, body
 .page-wrap
   min-height: 100%
   width: 100%
+
+.width-260
+  width: 260px
+
+.page-section
+  padding: 20px
+  background-color: white
+  margin-bottom: 20px
+.bottom-actions
+  position: fixed
+  bottom: 0
+  padding-top: 15px
+  padding-bottom: 15px
+  z-index: 2000
+  margin: 0
+  width: calc(100% - 150px)
+  box-shadow: 2px -1px 6px 1px $light-grey
+
+.text-center
+  text-align: center
+.text-right
+  text-align: right
+.pull-left
+  float: left
+.pull-right
+  float: right
+.inline-block
+  display: inline-block
+  vertical-align: top
+.pd-l10
+  padding-left: 10px
+.mg-lr10
+  margin-left: 10px
+  margin-right: 10px
+.mg-b10
+  margin-bottom: 10px
