Add Application Detail Page

--- a/src/app.sass
+++ b/src/app.sass
@@ -43,6 +43,11 @@ html, body
   vertical-align: top
 .pd-l10
   padding-left: 10px
+.pd-tb10
+  padding-top: 10px
+  padding-bottom: 10px
+.mg-l10
+  margin-left: 10px
 .mg-lr10
   margin-left: 10px
   margin-right: 10px
