Polish Webpack Settings To Split Css Files When Building

--- a/src/app.sass
+++ b/src/app.sass
@@ -1,55 +1,56 @@
 @import "./base/variables.scss"
-.ant-menu-submenu-inline > .ant-menu-submenu-title .ant-menu-submenu-arrow
-  right: 10% !important
-.ant-menu-inline .ant-menu-submenu-title
-  padding-right: 24px !important
-html, body
-  background-color: $light-grey
-#app
-  height: 100%
-  width: 100%
-  background-color: $light-grey
-.page-wrap
-  min-height: 100%
-  width: 100%
+\:global
+  .ant-menu-submenu-inline > .ant-menu-submenu-title .ant-menu-submenu-arrow
+    right: 10% !important
+  .ant-menu-inline .ant-menu-submenu-title
+    padding-right: 24px !important
+  html, body
+    background-color: $light-grey
+  #app
+    height: 100%
+    width: 100%
+    background-color: $light-grey
+  .page-wrap
+    min-height: 100%
+    width: 100%
 
-.width-260
-  width: 260px
+  .width-260
+    width: 260px
 
-.page-section
-  padding: 20px
-  background-color: white
-  margin-bottom: 20px
-.bottom-actions
-  position: fixed
-  bottom: 0
-  padding-top: 15px
-  padding-bottom: 15px
-  z-index: 2000
-  margin: 0
-  width: calc(100% - 150px)
-  box-shadow: 2px -1px 6px 1px $light-grey
+  .page-section
+    padding: 20px
+    background-color: white
+    margin-bottom: 20px
+  .bottom-actions
+    position: fixed
+    bottom: 0
+    padding-top: 15px
+    padding-bottom: 15px
+    z-index: 2000
+    margin: 0
+    width: calc(100% - 150px)
+    box-shadow: 2px -1px 6px 1px $light-grey
 
-.text-center
-  text-align: center
-.text-right
-  text-align: right
-.pull-left
-  float: left
-.pull-right
-  float: right
-.inline-block
-  display: inline-block
-  vertical-align: top
-.pd-l10
-  padding-left: 10px
-.pd-tb10
-  padding-top: 10px
-  padding-bottom: 10px
-.mg-l10
-  margin-left: 10px
-.mg-lr10
-  margin-left: 10px
-  margin-right: 10px
-.mg-b10
-  margin-bottom: 10px
+  .text-center
+    text-align: center
+  .text-right
+    text-align: right
+  .pull-left
+    float: left
+  .pull-right
+    float: right
+  .inline-block
+    display: inline-block
+    vertical-align: top
+  .pd-l10
+    padding-left: 10px
+  .pd-tb10
+    padding-top: 10px
+    padding-bottom: 10px
+  .mg-l10
+    margin-left: 10px
+  .mg-lr10
+    margin-left: 10px
+    margin-right: 10px
+  .mg-b10
+    margin-bottom: 10px
