--- a/src/components/pages/MainPage/style.sass
+++ b/src/components/pages/MainPage/style.sass
@@ -1,5 +1,5 @@
 @import './base/variables.scss'
-.ant-menu-dark .ant-menu-inline.ant-menu-sub.ant-menu-sub
+\:global .ant-menu-dark .ant-menu-inline.ant-menu-sub.ant-menu-sub
   box-shadow: none
 .page-navigation
   position: fixed
