--- a/src/routes/AreaManage/style.sass
+++ b/src/routes/AreaManage/style.sass
@@ -1,8 +1,9 @@
 @import './base/variables.scss'
 .area-card
-  .ant-card-head
-    background: lighten($primary, 25%)
-    color: white
-  .ant-card-head-title
-    text-align: center
-    color: white
+  \:global
+    .ant-card-head
+      background: lighten($primary, 25%)
+      color: white
+    .ant-card-head-title
+      text-align: center
+      color: white
