--- a/src/routes/Dashboard/components/style.sass
+++ b/src/routes/Dashboard/components/style.sass
@@ -13,7 +13,8 @@
     text-align: center
   .card-body
     padding: 10px
-    .ant-form-item-label
-      text-align: left
-    .ant-form-item-control-wrapper
-      text-align: right
+    \:global
+      .ant-form-item-label
+        text-align: left
+      .ant-form-item-control-wrapper
+        text-align: right
