--- a/src/components/base/_variables.scss
+++ b/src/components/base/_variables.scss
@@ -77,3 +77,6 @@ $base-url-fonts           : #{$base-url}/fonts !default;
 $stroke-color: white;
 $stroke-fill: white;
 $stroke-text: none;
+
+// Menu
+$menu-color: #fff;
