--- a/src/components/pages/MainPage/style.sass
+++ b/src/components/pages/MainPage/style.sass
@@ -7,7 +7,7 @@
   left: 0
   padding-top: 50px
   height: 100%
-  background-color: $primary
+  background-color: $menu-color
   width: 150px
 
 .page-header
@@ -25,6 +25,6 @@
   display: inline-block
   width: 100%
   height: 100%
-  padding-top: 50px
-  padding-left: 150px
+  padding-top: 60px
+  padding-left: 180px
   overflow: scroll
