Add role Select

--- a/src/components/pages/MainPage/style.sass
+++ b/src/components/pages/MainPage/style.sass
@@ -21,6 +21,14 @@
   z-index: 1000
   text-align: right
   padding: 0 20px
+  \:global .ant-select-selection
+    background-color: inherit
+    border: none
+    box-shadow: none
+    \:global .ant-select-selection-selected-value
+      color: white
+  \:global .ant-select-arrow
+    color: white
 .page-body
   display: inline-block
   width: 100%
