--- a/src/antd.less
+++ b/src/antd.less
@@ -1,2 +1,8 @@
 @import "antd/dist/antd.less";
 @import "./theme.less";
+
+.iconfont-mixin() {
+  &:before {
+    font-family: "anticon_user", "anticon"!important;
+  }
+}
