--- a/src/routes/ApplicationDetails/components/Paas/style.sass
+++ b/src/routes/ApplicationDetails/components/Paas/style.sass
@@ -18,3 +18,18 @@
         text-align: left
       .ant-form-item-control-wrapper
         text-align: right
+
+\:global
+  .ant-card-head
+    min-height: 24px
+    background-color: lighten($primary, .9)
+    .ant-card-head-title
+      color: white
+      text-align: center
+      padding: 5px
+  .ant-card-body
+    padding: 10px
+    .ant-form-item-label
+      text-align: left
+    .ant-form-item-control-wrapper
+      text-align: right
