--- a/src/components/pages/LoginForm/styles.scss
+++ b/src/components/pages/LoginForm/styles.scss
@@ -7,7 +7,7 @@
   display: flex;
   z-index: 101;
   background-color: white;
-  background-image: url("/static/bg.svg");
+  background-image: url("/static/tank.svg");
   background-size: cover;
   justify-content: center;
   align-items: center;
