--- a/src/routes/Dashboard/components/components/FormResource/style.sass
+++ b/src/routes/Dashboard/components/components/FormResource/style.sass
@@ -3,7 +3,7 @@
   width: 220px
   border: 1px solid $light-grey
   display: inline-block
-  margin: 0 20px
+  margin: 5px 20px
   .card-header
     background-color: lighten($primary, .9)
     border-bottom: 1px solid $light-grey
@@ -25,7 +25,7 @@
   width: 220px
   border: 1px solid $light-grey
   display: inline-block
-  margin: 0 20px
+  margin: 5px 20px
   .card-header
     border-bottom: 1px solid $light-grey
     padding: 5px
