Implemented Approval page

--- a/src/app.sass
+++ b/src/app.sass
@@ -1,4 +1,6 @@
 @import "./base/variables.scss"
+@import "./base/functions.scss"
+@import "./base/helpers.scss"
 \:global
   .ant-menu-submenu-inline > .ant-menu-submenu-title .ant-menu-submenu-arrow
     right: 10% !important
