Add paas resource form

--- a/src/routes/Dashboard/components/style.sass
+++ b/src/routes/Dashboard/components/style.sass
@@ -18,3 +18,8 @@
         text-align: left
       .ant-form-item-control-wrapper
         text-align: right
+
+.scode-info
+\:global
+   .scode-info .ant-form-item-label
+    text-align: left
