--- a/src/routes/NewResource/components/Redis/style.sass
+++ b/src/routes/NewResource/components/Redis/style.sass
@@ -19,7 +19,17 @@
       .ant-form-item-control-wrapper
         text-align: right
 
-.scode-info
 \:global
-   .scode-info .ant-form-item-label
-    text-align: left
+  .ant-card-head
+    min-height: 24px
+    background-color: lighten($primary, .9)
+    .ant-card-head-title
+      color: white
+      text-align: center
+      padding: 5px
+  .ant-card-body
+    padding: 10px
+    .ant-form-item-label
+      text-align: left
+    .ant-form-item-control-wrapper
+      text-align: right
