--- a/src/routes/Domain/Item/style.sass
+++ b/src/routes/Domain/Item/style.sass
@@ -2,7 +2,7 @@
 .area-card
   \:global
     .ant-card-head
-      background: lighten($primary, 25%)
+      // background: lighten($primary, 25%)
       color: white
     .ant-card-head-title
       text-align: center
