--- a/src/components/base/_variables.scss
+++ b/src/components/base/_variables.scss
@@ -35,7 +35,7 @@ $link-color               : #3497DA !default;
 
 /// Light grey
 /// @type Color
-$light-grey               : #ecf0f1 !default;
+$light-grey               : #ebebeb !default;
 
 /// Medium grey
 /// @type Color
