--- a/src/components/FormResource/style.sass
+++ b/src/components/FormResource/style.sass
@@ -2,6 +2,7 @@
 .card-form
   width: 220px
   border: 1px solid $light-grey
+  border-radius: 3px
   display: inline-block
   margin: 5px 20px
   .card-header
@@ -24,6 +25,7 @@
   color: rgba(0, 0, 0, 0.25)
   width: 220px
   border: 1px solid $light-grey
+  border-radius: 3px
   display: inline-block
   margin: 5px 20px
   .card-header
