Fix according email

--- a/src/components/FormResource/style.sass
+++ b/src/components/FormResource/style.sass
@@ -42,6 +42,8 @@
         text-align: right
         .ant-form-item-control
           color: rgba(0, 0, 0, 0.25)
+        .ant-form-item-control .ant-input-number-input
+          color: rgba(0, 0, 0, 0.25)
       .ant-form-item-control-wrapper .ant-input-group-addon
         color: rgba(0, 0, 0, 0.25)
   .card-body label
