--- a/src/components/pages/MainPage/style.sass
+++ b/src/components/pages/MainPage/style.sass
@@ -14,25 +14,25 @@
     font-size: 10px
 
 .page-header
-  position: fixed
-  top: 0
-  background-color: $primary
-  color: white
-  height: 50px
-  width: 100%
-  line-height: 50px
-  z-index: 1000
+  // position: fixed
+  // top: 0
+  // background-color: $primary
+  // color: white
+  // height: 50px
+  // width: 100%
+  // line-height: 50px
+  // z-index: 1000
   text-align: right
   padding: 0 20px
-  box-shadow: 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.2), 0 1px 8px 0 rgba(0,0,0,0.3)
-  \:global .ant-select-selection
-    background-color: inherit
-    border: none
-    box-shadow: none
-    \:global .ant-select-selection-selected-value
-      color: white
-  \:global .ant-select-arrow
-    color: white
+  // box-shadow: 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.2), 0 1px 8px 0 rgba(0,0,0,0.3)
+  // \:global .ant-select-selection
+  //   background-color: inherit
+  //   border: none
+  //   box-shadow: none
+  //   \:global .ant-select-selection-selected-value
+  //     color: white
+  // \:global .ant-select-arrow
+  //   color: white
 .page-body
   display: inline-block
   width: 100%
