--- a/src/theme.less
+++ b/src/theme.less
@@ -203,8 +203,8 @@
 // @grid-gutter-width      : 0;
 
 // // Layout
-@layout-body-background      : #005aab;
-@layout-header-background    : #005aab;
+// @layout-body-background      : #005aab;
+// @layout-header-background    : #005aab;
 // @layout-footer-background    : @layout-body-background;
 // @layout-header-height        : 64px;
 // @layout-header-padding       : 0 50px;
@@ -307,7 +307,7 @@
 // // Menu
 // // ---
 // @menu-dark-bg: @layout-header-background;
-@menu-dark-submenu-bg: #005aab;
+// @menu-dark-submenu-bg: #005aab;
 // @menu-collapsed-width: 80px;
 
 // // Spin
