--- a/src/routes/NewResource/Item/style.sass
+++ b/src/routes/NewResource/Item/style.sass
@@ -42,3 +42,11 @@
           color: rgba(0, 0, 0, 0.25)
   .card-body label
     color: rgba(0, 0, 0, 0.25)
+
+.radioButton
+  margin-bottom: 24px
+  margin-top: 24px
+  \:global
+    .ant-radio-button-wrapper-checked
+      background: $primary
+      color: white
