--- a/src/app.sass
+++ b/src/app.sass
@@ -21,7 +21,7 @@
     width: 260px
 
   .page-section
-    padding: 20px
+    padding: 30px
     background-color: white
     margin-bottom: 20px
   .bottom-actions
@@ -57,3 +57,6 @@
     margin-right: 10px
   .mg-b10
     margin-bottom: 10px
+  .table-header
+    background: #dcebfa
+    text-align: center
