--- a/src/components/base/_helpers.scss
+++ b/src/components/base/_helpers.scss
@@ -92,6 +92,11 @@
   height: auto;
 }
 
+.table-header {
+  background: #dcebfa;
+  text-align: center;
+}
+
 // @media only screen and (max-width: map-get($breakpoints, large)) {
 
 // }
