--- a/src/routes/NewResource/MysqlPanelDetail/style.sass
+++ b/src/routes/NewResource/MysqlPanelDetail/style.sass
@@ -1,52 +1,20 @@
 @import './base/variables.scss'
-.card-form
-  width: 250px
-  border: 1px solid $light-grey
-  display: inline-block
-  margin: 5px 20px
-  .card-header
-    background-color: lighten($primary, .9)
-    border-bottom: 1px solid $light-grey
-    color: white
-    padding: 5px
-    font: 1.5em
-    text-align: center
-  .card-body
-    padding: 10px
-    \:global
-      .ant-form-item-label
-        text-align: left
-      .ant-form-item-control-wrapper
-        text-align: right
-
-.card-disabled
-  background-color: #f5f5f5
-  color: rgba(0, 0, 0, 0.25)
-  width: 220px
-  border: 1px solid $light-grey
-  display: inline-block
-  margin: 5px 20px
-  .card-header
-    border-bottom: 1px solid $light-grey
-    padding: 5px
-    font: 1.5em
-    text-align: center
-  .card-body
-    padding: 10px
-    \:global
-      .ant-form-item-label
-        text-align: left
-      .ant-form-item-control-wrapper
-        text-align: right
-        .ant-form-item-control
-          color: rgba(0, 0, 0, 0.25)
-  .card-body label
-    color: rgba(0, 0, 0, 0.25)
-
-
 \:global
   .detail .ant-collapse-content.ant-collapse-content-active
     background-color: #b5f5ec
     padding: 0 0 0 0
   .detail .ant-collapse-content-box
     padding-bottom: 0
+
+\:global
+  .middleware .rc-tabs-tab
+    padding-left: 0
+    padding-right: 0
+  .middleware .ant-table-thead > tr > th
+    background: #dcebfa
+  .middleware .ant-table-tbody > tr > td:first-child
+    border-left: 1px solid #e8e8e8
+  .middleware .ant-table-tbody > tr > td:last-child
+    border-right: 1px solid #e8e8e8
+  .middleware .ant-table-tbody > tr:nth-child(even)
+    background: #f7fbff
