--- a/src/theme.less
+++ b/src/theme.less
@@ -7,7 +7,7 @@
 // @ant-prefix             : ant;
 
 // // -------- Colors -----------
-@primary-color          : #0075A8;
+@primary-color          : #005aaa;
 @info-color             : #78C9CF;
 @success-color          : #27AA5E;
 @processing-color       : @primary-color;
