--- a/src/app.sass
+++ b/src/app.sass
@@ -60,3 +60,14 @@
   .table-header
     background: #dcebfa
     text-align: center
+  .ant-table-thead > tr > th
+    background: #dcebfa
+  .ant-table-tbody > tr > td:first-child
+    border-left: 1px solid #e8e8e8
+  .ant-table-tbody > tr > td:last-child
+    border-right: 1px solid #e8e8e8
+  .ant-table-tbody > tr:nth-child(even)
+    background: #f7fbff
+  .ant-radio-button-wrapper-checked
+    background: $primary
+    color: white
