--- a/src/app.sass
+++ b/src/app.sass
@@ -68,6 +68,11 @@
     border-right: 1px solid #e8e8e8
   .ant-table-tbody > tr:nth-child(even)
     background: #f7fbff
+  .ant-radio-button-wrapper:first-child
+    border-left: 1px solid $primary
+  .ant-radio-button-wrapper
+    color: $primary
+    border: 1px solid $primary
   .ant-radio-button-wrapper-checked
     background: $primary
     color: white
