Change expandTable and collapse

--- a/src/app.sass
+++ b/src/app.sass
@@ -76,3 +76,13 @@
   .ant-radio-button-wrapper-checked
     background: $primary
     color: white
+  .cursor
+    cursor: pointer
+
+  // menu
+  .ant-menu-item-group-list
+    background: #353c46
+  .ant-menu-item-group-title
+    color: #dfdfdf !important
+  .ant-menu-item
+    color: #a4a9b9 !important
