--- a/src/components/pages/MainPage/style.sass
+++ b/src/components/pages/MainPage/style.sass
@@ -44,3 +44,10 @@
 .logout
   margin-left: 10px
   cursor: pointer
+
+.user
+	width: 137
+	height: 12
+	fontSize: 12
+	lineHeight: 40
+	color: #005aaa
