--- a/src/routes/Account/List/styles.sass
+++ b/src/routes/Account/List/styles.sass
@@ -6,3 +6,12 @@
     .ant-radio-button-wrapper-checked
       background: $primary
       color: white
+
+.account
+  \:global
+    .ant-table-row-expand-icon-cell
+      display: none
+    .ant-table-expand-icon-th
+      display: none
+    .ant-table-tbody > tr > td:nth-child(2)
+      border-left: 1px solid #e8e8e8
