--- a/src/theme.less
+++ b/src/theme.less
@@ -209,7 +209,7 @@
 // @layout-header-height        : 64px;
 // @layout-header-padding       : 0 50px;
 // @layout-footer-padding       : 24px 50px;
-// @layout-sider-background     : @layout-header-background;
+@layout-sider-background     : #2d333c;
 // @layout-trigger-height       : 48px;
 // @layout-trigger-background   : #002140;
 // @layout-trigger-color        : #fff;
@@ -306,8 +306,11 @@
 
 // // Menu
 // // ---
-// @menu-dark-bg: @layout-header-background;
-// @menu-dark-submenu-bg: #005aab;
+@menu-dark-bg: #2d333c;
+@menu-dark-submenu-bg: #353c46;
+@menu-dark-highlight-color: #005aaa;
+@menu-item-group-title-color: #dfdfdf;
+
 // @menu-collapsed-width: 80px;
 
 // // Spin
