--- a/src/components/pages/MainPage/style.sass
+++ b/src/components/pages/MainPage/style.sass
@@ -51,3 +51,13 @@
 	fontSize: 12
 	lineHeight: 40
 	color: #005aaa
+
+.user_select
+  \:global
+    .ant-select-selection.ant-select-selection--single
+      border: none
+    .ant-select-focused,
+    .ant-select-selection,
+    .ant-select-selection:focus,
+    .ant-select-selection:active
+      box-shadow: none
