Changed newApplication style

--- a/src/app.sass
+++ b/src/app.sass
@@ -78,6 +78,12 @@
     color: white
   .cursor
     cursor: pointer
+  .label
+  	height: 16px
+  	fontFamily: "PingFangSC-Semibold"
+  	fontSize: 16px
+  	lineHeight: 40px
+  	color: #333333
 
   // menu
   .ant-menu-item-group-list
@@ -86,3 +92,13 @@
     color: #dfdfdf !important
   .ant-menu-item
     color: #a4a9b9 !important
+  .ant-select-selection__rendered
+    margin: 0 33px 0 11px
+    border-right: 1px solid #e9edf3
+  .ant-input-number-input
+    text-align: right
+    padding-right: 30px
+
+  // Checkbox
+  .ant-checkbox-group-item.ant-checkbox-wrapper
+    margin-right: 40px
