--- a/src/components/pages/MainPage/style.sass
+++ b/src/components/pages/MainPage/style.sass
@@ -61,3 +61,6 @@
     .ant-select-selection:focus,
     .ant-select-selection:active
       box-shadow: none
+    .ant-select-selection__rendered
+      border-right: none
+      margin-right: 11px
