--- a/src/components/FormResource/style.sass
+++ b/src/components/FormResource/style.sass
@@ -1,19 +1,18 @@
 @import './base/variables.scss'
 .card-form
-  width: 220px
-  border: 1px solid $light-grey
+  width: 264px
+  border: 1px solid $primary
   border-radius: 3px
   display: inline-block
-  margin: 5px 20px
+  margin: 5px 10px 5px 0
   .card-header
     background-color: lighten($primary, .9)
     border-bottom: 1px solid $light-grey
     color: white
-    padding: 5px
+    padding: 9px 0 9px 0
     font: 1.5em
     text-align: center
   .card-body
-    padding: 10px
     \:global
       .ant-form-item-label
         text-align: left
@@ -21,20 +20,19 @@
         text-align: right
 
 .card-disabled
-  background-color: #f5f5f5
   color: rgba(0, 0, 0, 0.25)
-  width: 220px
+  width: 264px
   border: 1px solid $light-grey
   border-radius: 3px
   display: inline-block
-  margin: 5px 20px
+  margin: 5px 10px 5px 0
   .card-header
     border-bottom: 1px solid $light-grey
-    padding: 5px
+    background-color: #dcebfa
+    padding: 9px 0 9px 0
     font: 1.5em
     text-align: center
   .card-body
-    padding: 10px
     \:global
       .ant-form-item-label
         text-align: left
@@ -46,5 +44,7 @@
           color: rgba(0, 0, 0, 0.25)
       .ant-form-item-control-wrapper .ant-input-group-addon
         color: rgba(0, 0, 0, 0.25)
+      .ant-input-number-input[disabled]
+        background: #fff
   .card-body label
     color: rgba(0, 0, 0, 0.25)
