--- a/src/routes/Dashboard/components/RabbitMQProducerPanelDetail/style.sass
+++ b/src/routes/Dashboard/components/RabbitMQProducerPanelDetail/style.sass
@@ -46,7 +46,7 @@
 
 \:global
   .detail .ant-collapse-content.ant-collapse-content-active
-    background-color: #b5f5ec
+    background-color: #f2f9ff
     padding: 0 0 0 0
   .detail .ant-collapse-content-box
     padding-bottom: 0
