--- a/src/components/pages/MainPage/style.sass
+++ b/src/components/pages/MainPage/style.sass
@@ -48,8 +48,8 @@
 .user
 	width: 137
 	height: 12
-	fontSize: 12
-	lineHeight: 40
+	font-size: 12
+	line-height: 40
 	color: #005aaa
 
 .user_select
