--- a/src/routes/ApplicationDetails/Item/style.sass
+++ b/src/routes/ApplicationDetails/Item/style.sass
@@ -1,44 +1,54 @@
 @import './base/variables.scss'
 .card-form
-  width: 220px
-  border: 1px solid $light-grey
+  width: 264px
+  border: 1px solid $primary
+  border-radius: 3px
   display: inline-block
-  margin: 5px 20px
+  margin: 5px 10px 5px 0
   .card-header
     background-color: lighten($primary, .9)
     border-bottom: 1px solid $light-grey
     color: white
-    padding: 5px
+    padding: 9px 0 9px 0
     font: 1.5em
     text-align: center
   .card-body
-    padding: 10px
     \:global
       .ant-form-item-label
         text-align: left
       .ant-form-item-control-wrapper
         text-align: right
+.my-card
+  \:global
+    .ant-card-body
+      padding: 0
+    .ant-row.ant-form-item
+      margin: 14px 20px
 
-.card-disabled
-  background-color: #f5f5f5
-  color: rgba(0, 0, 0, 0.25)
-  width: 220px
-  border: 1px solid $light-grey
-  display: inline-block
-  margin: 5px 20px
-  .card-header
-    border-bottom: 1px solid $light-grey
-    padding: 5px
-    font: 1.5em
-    text-align: center
-  .card-body
-    padding: 10px
-    \:global
-      .ant-form-item-label
-        text-align: left
-      .ant-form-item-control-wrapper
-        text-align: right
-        .ant-form-item-control
-          color: rgba(0, 0, 0, 0.25)
-  .card-body label
-    color: rgba(0, 0, 0, 0.25)
+.graph-card
+  \:global
+    .ant-card-body
+      padding: 0
+
+.blue-progress
+  \:global
+    .ant-progress-circle-path
+      stroke: #33beff
+    .ant-badge-status-dot
+      width: 10px
+      height: 10px
+    .ant-badge-status-default
+     background-color: #ededed
+    .ant-badge-status-success
+     background-color: #33beff
+.green-progress
+  \:global
+    .ant-progress-circle-path
+      stroke: #149718
+    .ant-badge-status-dot
+      width: 10px
+      height: 10px
+    .ant-badge-status-default
+     background-color: #ededed
+    .ant-badge-status-success
+     background-color: #149718
