--- a/src/routes/ApplicationDetails/style.sass
+++ b/src/routes/ApplicationDetails/style.sass
@@ -23,3 +23,8 @@
 \:global
    .scode-info .ant-form-item-label
     text-align: left
+    font-size: 16px
+   .ant-form label
+    font-size: 16px
+   .ant-form-item-control
+     font-size: 16px
