--- a/src/routes/Dashboard/components/style.sass
+++ b/src/routes/Dashboard/components/style.sass
@@ -45,3 +45,7 @@
 \:global
    .scode-info .ant-form-item-label
     text-align: left
+    .ant-form label
+     font-size: 16px
+    .ant-form-item-control
+      font-size: 16px
