Changed application detail style

--- a/src/app.sass
+++ b/src/app.sass
@@ -112,7 +112,7 @@
 
   // Checkbox
   .ant-checkbox-group-item.ant-checkbox-wrapper
-    margin-right: 40px
+    margin-right: 32px
 
   // pagination
   .ant-pagination-item-active
@@ -121,3 +121,31 @@
   .ant-pagination-item-active:focus a,
   .ant-pagination-item-active:hover a
     color: #fff
+
+  // Tabs
+  .ant-tabs-bar
+    border-bottom: none
+    margin: 0 0 30px 0
+  .ant-tabs.ant-tabs-card > .ant-tabs-bar .ant-tabs-tab
+    background: #fff
+    color: #333
+    margin-right: 0
+    width: 208px
+    text-align: center
+  .ant-tabs.ant-tabs-card > .ant-tabs-bar .ant-tabs-tab-active
+    background: #dcebfa
+    color: #333
+  .ant-tabs-nav-container-scrolling
+    padding-left: 35px
+    padding-right: 35px
+  .ant-tabs-tab-prev.ant-tabs-tab-arrow-show,
+  .ant-tabs-tab-next.ant-tabs-tab-arrow-show
+    width: 30px
+    border: 1px solid #eaedf2
+    height: 34px
+  .ant-tabs-tab-next
+    margin-left: 5px
+  .ant-tabs.ant-tabs-card > .ant-tabs-bar .ant-tabs-tab
+    border: 1px solid #eaedf2
+    border-radius: 0
+    line-height: 31px
