Changed approval styles

--- a/src/app.sass
+++ b/src/app.sass
@@ -132,6 +132,10 @@
     margin-right: 0
     width: 208px
     text-align: center
+    border: 1px solid #eaedf2
+    border-radius: 0px
+    line-height: 31px
+
   .ant-tabs.ant-tabs-card > .ant-tabs-bar .ant-tabs-tab-active
     background: #dcebfa
     color: #333
@@ -145,7 +149,12 @@
     height: 34px
   .ant-tabs-tab-next
     margin-left: 5px
-  .ant-tabs.ant-tabs-card > .ant-tabs-bar .ant-tabs-tab
-    border: 1px solid #eaedf2
-    border-radius: 0
-    line-height: 31px
+
+  // Modal
+  .ant-modal-header
+    padding: 27px 24px
+  .ant-modal-body
+    padding: 60px 125px 0 125px
+  .ant-modal-footer
+    padding: 30px 125px 60px 125px
+    border-top: none
