--- a/src/routes/Preview/Paas/style.sass
+++ b/src/routes/Preview/Paas/style.sass
@@ -19,26 +19,9 @@
       .ant-form-item-control-wrapper
         text-align: right
 
-.card-disabled
-  background-color: #f5f5f5
-  color: rgba(0, 0, 0, 0.25)
-  width: 220px
-  border: 1px solid $light-grey
-  display: inline-block
-  margin: 5px 20px
-  .card-header
-    border-bottom: 1px solid $light-grey
-    padding: 5px
-    font: 1.5em
-    text-align: center
-  .card-body
-    padding: 10px
-    \:global
-      .ant-form-item-label
-        text-align: left
-      .ant-form-item-control-wrapper
-        text-align: right
-        .ant-form-item-control
-          color: rgba(0, 0, 0, 0.25)
-  .card-body label
-    color: rgba(0, 0, 0, 0.25)
+.my-card
+  \:global
+    .ant-card-body
+      padding: 0
+    .ant-row.ant-form-item
+      margin: 14px 20px
