--- a/src/app.sass
+++ b/src/app.sass
@@ -109,6 +109,9 @@
   .ant-input-number-input
     text-align: right
     padding-right: 30px
+  .ant-menu-dark .ant-menu-item-selected > a,
+  .ant-menu-dark .ant-menu-item-selected > a:hover
+    color: #a4a9b9
 
   // Checkbox
   .ant-checkbox-group-item.ant-checkbox-wrapper
