--- a/src/app.sass
+++ b/src/app.sass
@@ -111,7 +111,7 @@
     padding-right: 30px
   .ant-menu-dark .ant-menu-item-selected > a,
   .ant-menu-dark .ant-menu-item-selected > a:hover
-    color: #a4a9b9
+    color: #dfdfdf
 
   // Checkbox
   .ant-checkbox-group-item.ant-checkbox-wrapper
