--- a/src/app.sass
+++ b/src/app.sass
@@ -74,7 +74,7 @@
   .ant-table-thead > tr > th.ant-table-column-sort
     background: #dcebfa
   .ant-table-body
-    overflow-x: auto
+    overflow-x: auto !important
 
   // radio
   .ant-radio-button-wrapper:first-child
